# Spotify-Playlist

./: .gitignore  GENRES_AJOUTES.md  README.md  README_SCORING.md  analyze_auto_playlists.py  check_auto_created.py  credentials.py  delete_playlist.py  find_auto_playlists.py  genre_cache.py  last_update.json  list_playlists.py  main.py  music_genre.py  pyproject.toml  train_genre_model.py  update_playlists.py  weights_4_4_3.json
data/: weights_4_4_3.json
data/genres/: classe_0.json  classe_3.json  classe_4.json  classe_6.json  classe_7.json  classe_8.json  classe_9.json
genres/: classe_1.json  classe_1_1.4_enrichie.json  classe_2.json  classe_3.json  classe_4.json  classe_5.json  classe_6.json  classe_8.json  classe_9.json
src/spotifyapp/: __init__.py  analyze_auto_playlists.py  check_auto_created.py  credentials.py  delete_playlist.py  find_auto_playlists.py  genre_cache.py  genre_scoring.py  list_playlists.py  music_genre.py  paths.py  playlist_cache.py  train_genre_model.py  update_playlists.py
