[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotifyapp"
version = "0.1.0"
description = "Gestion des playlists Spotify par genres (nomenclature française)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "spotipy>=2.23.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]
